@@ -675,6 +675,8 @@ class DeclarativeTest(DeclarativeTestBase):
         # longer the case
         sa.orm.compile_mappers()
 
+        eq_(str(Address.user_id.property.columns[0].foreign_keys[0]), "ForeignKey('users.id')")
+        
         Base.metadata.create_all()
         u1 = User(name='u1', addresses=[
             Address(email='one'),
